--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
       password: 1234
 
 jwt:
-  secret: hello.world.ee.ff
+  secret: hello.world.its.really.fun.that.i.need.to.write.more.haha
